--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
